--- a/k8s/values.yaml
+++ b/k8s/values.yaml
@@ -12,6 +12,15 @@ runners:
       [runners.kubernetes]
         namespace = "{{.Release.Namespace}}"
         image = "alpine:3.21"
+        # Add host aliases for DNS mapping
+        # host_aliases = [
+        #   {
+        #     ip = "10.30.1.11"
+        #     hostnames = ["gitlab.basile.local"]
+        #   }
+        # ]
+      [runners.custom_build_dir]
+        enabled = false
   tags: "kubernetes,cluster"
   runUntagged: true
   protected: false
@@ -43,7 +52,7 @@ persistence:
   accessMode: ReadWriteOnce
   size: 10Gi
 
-certsSecretName: null
+certsSecretName: "gitlab-runner-certs"
 
 rbac:
   create: true
