Update Proxmox and GitLab configurations to use dynamic URLs and enhance VM disk size

--- a/k8s/dashboard/dashboard-ingress.yaml
+++ b/k8s/dashboard/dashboard-ingress.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: dashboard.kube.basile.local
+  - host: dashboard.kube.basile.uha.fr
     http:
       paths:
       - path: /
