--- a/k8s/runner/cert-secret.example.yml
+++ b/k8s/runner/cert-secret.example.yml
@@ -5,4 +5,4 @@ metadata:
   namespace: gitlab-runner
 type: Opaque
 data:
-  gitlab.basile.local.crt: your_base64_encoded_certificate
+  <gitlab_url>.crt: your_base64_encoded_certificate
