--- a/k8s/grafana/ingress.yaml
+++ b/k8s/grafana/ingress.yaml
@@ -4,11 +4,11 @@ metadata:
   name: grafana
   namespace: monitoring
   annotations:
-    kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
+  ingressClassName: nginx
   rules:
   - host: grafana.kube.basile.uha.fr
     http:
