Add node affinity to persistent volume configurations for Grafana and Prometheus

--- a/k8s/grafana/grafana-pv.yaml
+++ b/k8s/grafana/grafana-pv.yaml
@@ -14,3 +14,11 @@ spec:
   hostPath:
     path: "/mnt/data/grafana"
   persistentVolumeReclaimPolicy: Retain
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+        - matchExpressions:
+          - key: kubernetes.io/hostname
+            operator: In
+            values:
+            - master1
